[gd_scene load_steps=21 format=2]

[ext_resource path="res://src/world/environment/hazard/worldWideWeb/animationSprites/10009.png" type="Texture" id=1]
[ext_resource path="res://src/world/environment/hazard/worldWideWeb/WWW.gd" type="Script" id=2]
[ext_resource path="res://src/world/environment/hazard/worldWideWeb/animationSprites/10010.png" type="Texture" id=3]
[ext_resource path="res://src/world/environment/hazard/worldWideWeb/animationSprites/10004.png" type="Texture" id=4]
[ext_resource path="res://src/world/environment/hazard/worldWideWeb/animationSprites/10007.png" type="Texture" id=5]
[ext_resource path="res://src/world/environment/hazard/worldWideWeb/animationSprites/10001.png" type="Texture" id=6]
[ext_resource path="res://src/world/environment/hazard/worldWideWeb/animationSprites/10005.png" type="Texture" id=7]
[ext_resource path="res://src/world/environment/hazard/worldWideWeb/animationSprites/10006.png" type="Texture" id=8]
[ext_resource path="res://src/world/environment/hazard/worldWideWeb/animationSprites/10002.png" type="Texture" id=9]
[ext_resource path="res://src/world/environment/hazard/worldWideWeb/animationSprites/10008.png" type="Texture" id=10]
[ext_resource path="res://src/world/environment/hazard/worldWideWeb/animationSprites/10003.png" type="Texture" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 50.0

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Curve" id=4]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0.0917647, -172.727 ), 0.0, 0.0, 0, 0, Vector2( 0.950588, 194.545 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 100.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.07
orbit_velocity = 0.2
orbit_velocity_random = 0.0
radial_accel = -100.0
radial_accel_curve = SubResource( 5 )
angle = 720.0
angle_random = 1.0
scale = 7.0
color = Color( 0.498039, 0.498039, 0.498039, 1 )
hue_variation = -0.06
hue_variation_random = 0.36

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="WWW" type="StaticBody2D" groups=[
"hazard",
]]
input_pickable = true
collision_layer = 8
script = ExtResource( 2 )
gravity_intensity = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
shape = SubResource( 1 )

[node name="air" type="Area2D" parent="."]
gravity_vec = Vector2( -1.22465e-14, -200 )
priority = 1.0
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="air"]
shape = SubResource( 2 )

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 4.5, 4.5 )
frames = SubResource( 3 )
frame = 7
playing = true

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 20.0
one_shot = true

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 200
lifetime = 200.0
one_shot = true
speed_scale = 1.16
explosiveness = 1.0
randomness = 0.29
fract_delta = false
visibility_rect = Rect2( -1500, -1500, 3000, 3000 )
local_coords = false
process_material = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blowing = SubResource( 7 )
anims/blowing_off = SubResource( 8 )
anims/blowing_on = SubResource( 9 )
[connection signal="input_event" from="." to="." method="_on_Pipe_input_event"]
[connection signal="body_entered" from="air" to="." method="_on_air_body_entered"]
[connection signal="body_exited" from="air" to="." method="_on_air_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
